--- a/proposal/Proposal.Rmd
+++ b/proposal/Proposal.Rmd
@@ -19,9 +19,11 @@ library(tidyverse)
 
 # Introduction
 
-In the sport of tennis, statisticians are often asked to analyze an individual player’s statistics on how well they are performing and what they could possibly do to perform better at tournaments. But often, information about how well other players are doing is left out of the picture when determining what a tennis player should work on, especially given that the sport is continuously changing as new techniques and racquets are being introduced. Using datasets from 2010-2017 of the Men’s ATP World Tour, we will attempt to solve the question “What makes a good tennis player?” using multiple linear regression models, filtering for each unique surface (Hard, Clay, and Grass). In our dataset, we will use the average winning statistics for players that have won tournaments in the tour, throughout these years. We are interested in solving what will give us the largest number of tournament wins, as that is what determines the “best player.” We will look at many variables and hope to see if we can use it to predict what stats the best tennis player should have, in order to win the most number of tournaments wins.
+In the sport of tennis, statisticians are often asked to analyze an individual player’s statistics to determine how well they are performing and what they could possibly do to perform better at tournaments. But often, in determining what statistics should be improved on, the likelihood of winning a match usually does not consider the combination of multiple variables. Therefore, we decided to tackle on the question, "What is the probability that a tennis player will win a match?" Using datasets from 2010-2017 of the Men’s ATP World Tour, we will use logistic regression models to help us determine the probability that a player will win a match, given the necessary variables that help to determine the odds of winning a match. We will determine the best model by using model assessment techniques, given that our model follows the assumptions for using a logistic regression model. Once we have that model, we will use specific examples in our dataset to determine the probability that the winner and loser of a particular match matches the actual outcome.
  
 # Data 
+
+Using eight datasets from Jeff Sackmann's 'tennis_atp' Github repo, extracted from his website, tennisabstract.com, we used the information from all ATP World Tour-level matches from 2010-2017 to develop a logistic regression model. In order to accurately assess a model within the specified parameters of 2010-2017, we used data wrangling and manipulation techniques in R to combine the datasets and develop our response variable by splitting and reorganizing the dataset by having an observation that represents the winner and the loser (since information for both the winner and loser of a match represented one observation). Then, we filtered by randomly selecting a sample of 1,000 observations, using a seed and a random generator. With all of these techniques, we named our dataset 'ten', shortcut for tennis. Thus, these are the variables we will consider for our initial model:
 
 The data sets that we will be using for our analysis is not the same as the ones we initially received, as multiple data set manipulation techniques were used in Excel and in R. 
 
